tests/ui/traits/enum-negative-send-impl.stderr
error[E0277]: `NoSend` cannot be sent between threads safely
  --> $DIR/enum-negative-send-impl.rs:20:19
   |
LL |     requires_send(container);
   |     ------------- ^^^^^^^^^ `NoSend` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Container`, the trait `Send` is not implemented for `NoSend`
note: required because it appears within the type `Container`
  --> $DIR/enum-negative-send-impl.rs:12:6
   |
LL | enum Container {
   |      ^^^^^^^^^
note: required by a bound in `requires_send`
  --> $DIR/enum-negative-send-impl.rs:16:21
   |
LL | fn requires_send<T: Send>(_: T) {}
   |                     ^^^^ required by this bound in `requires_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
